# searchlite

./: .gitignore  CHANGELOG.md  LICENSE  README.html  README.md  chat-gpt-prompt.md  pyproject.toml  requirements.txt  requirements_optional.txt  setup.py
data/: medium_synthetic_data.csv  synthetic_data.csv
examples/: api_demo_v2.ipynb  notebook_demo.ipynb  notebook_demo_v2.ipynb  ollama_demo_v2.ipynb  st_demo_v2.ipynb
examples/deprecated/: notebook_demo_v1.ipynb
sandbox/: api.ipynb  document_logic.ipynb  documents_walkthrough.py  embedding_logic.py  from_csv.ipynb  medium_data_and_queries_generation.ipynb  ollama.ipynb  tf_idf_from_scratch.ipynb  tf_idf_scikit.ipynb
scripts/: basic_nb.py  embedder_nb.py  make_demo_nb.py
searchlite/: document.py
searchlite/embedders/: api.py  base.py  ollama.py  sentence_transformer.py  tfidf.py
searchlite/utils/: normalization.py  pandas.py
src/searchlite/: document.py
tests/: pytest.ini  test_documents.py
