[project]
name = "searchlite"
version = "0.1.0"
description = "A lightweight semantic search engine for small text datasets"
authors = [{ name = "Rohan Krishnan", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.0",
    "pandas>=1.5",
    "tabulate>=0.8.9",
    "numpy<2",
    "pandas>=1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["searchlite"]
include-package-data = true