[project]
name = "searchlite"
version = "0.2.0"
description = "A simple Python package that allows semantic search with simple syntax on small text data sets."
authors = [{ name = "Rohan Krishnan", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.0",
    "pandas>=1.5",
    "tabulate>=0.8.9",
    "numpy<2",
    "pandas>=1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
ollama = ["ollama"]
sentence_transformers = ["sentence-transformers>=2.2.2"]
dev = ["pytest"]

[tool.setuptools]
packages = ["searchlite"]
include-package-data = true